[gd_scene load_steps=13 format=3 uid="uid://lq0iqrihxlqo"]

[ext_resource type="Script" uid="uid://i2l2lle3snmx" path="res://Title/title.gd" id="1_gpixp"]
[ext_resource type="Texture2D" uid="uid://cx66bt6lahke8" path="res://Levels/Reference-Image.png" id="1_hvesb"]
[ext_resource type="Texture2D" uid="uid://db7hwoxko0p3b" path="res://Title/logo.png" id="4_riw74"]
[ext_resource type="Texture2D" uid="uid://dmf870qs4hp5l" path="res://Levels/Red Sky/Layers/4.png" id="4_syyxu"]
[ext_resource type="Texture2D" uid="uid://dhbamma4yaow2" path="res://Levels/Red Sky/Layers/5.png" id="5_cvgbi"]
[ext_resource type="Texture2D" uid="uid://doa6128d31n5f" path="res://Title/GeminiPlay.png" id="5_n1pb7"]
[ext_resource type="Texture2D" uid="uid://d2ib07vq6jl4r" path="res://Title/GeminiPlayHover.png" id="6_n1pb7"]
[ext_resource type="Texture2D" uid="uid://7erj3f87oir0" path="res://Levels/Red Sky/Layers/7.png" id="7_yagdo"]
[ext_resource type="Texture2D" uid="uid://bkkw20focd8uq" path="res://Levels/Red Sky/Layers/8.png" id="8_s1pkf"]
[ext_resource type="Texture2D" uid="uid://b68ggksiv0rq8" path="res://Title/GeminiQuit.png" id="9_cvgbi"]
[ext_resource type="AudioStream" uid="uid://cqskct45nm278" path="res://Title/435147__kickhat__ambient-drone-21072018.wav" id="9_gpixp"]
[ext_resource type="Texture2D" uid="uid://co3vfemb6vro" path="res://Title/GeminiQuitHover.png" id="10_xqurq"]

[node name="Title" type="Node2D"]
script = ExtResource("1_gpixp")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1014.0001, 542.00006)
rotation = -0.5235988
scale = Vector2(0.9549418, 0.8497215)
zoom = Vector2(0.6, 0.6)

[node name="TitleMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_gpixp")
volume_db = 14.136

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hvesb")
centered = false

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(1008.00006, 260)
scale = Vector2(0.5748312, 0.5748312)
texture = ExtResource("4_riw74")

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(988, 544)
texture = ExtResource("4_syyxu")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(988, 544)
texture = ExtResource("5_cvgbi")

[node name="Play" type="TextureButton" parent="."]
offset_left = 902.0
offset_top = 600.0
offset_right = 1362.0
offset_bottom = 823.0
scale = Vector2(0.39524585, 0.39524585)
texture_normal = ExtResource("5_n1pb7")
texture_pressed = ExtResource("6_n1pb7")
texture_hover = ExtResource("6_n1pb7")

[node name="Quit" type="TextureButton" parent="."]
offset_left = 902.0
offset_top = 717.0
offset_right = 1362.0
offset_bottom = 940.0
scale = Vector2(0.122641936, 0.122641936)
texture_normal = ExtResource("9_cvgbi")
texture_pressed = ExtResource("10_xqurq")
texture_hover = ExtResource("10_xqurq")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(988, 544)
texture = ExtResource("7_yagdo")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(988, 544)
texture = ExtResource("8_s1pkf")

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2(21.000061, 21)
scale = Vector2(5.5419617, 36.462807)
amount = 20
lifetime = 6.06
speed_scale = 3.64
randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(1, 0.5)
spread = 28.87
gravity = Vector2(100, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_min = 3.0
scale_amount_max = 7.0
color = Color(0.74509805, 0.74509805, 0.74509805, 1)

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
